--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-{{- $colors := .Site.Data.appearance.colors -}}
+{{- $colors := .Site.Data.appearance -}}
 <script src="https://cdn.tailwindcss.com"></script>
 <!-- SCHEMA -->
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -14,8 +14,8 @@
 {{- end -}}
 <style>
     :root {
-        --primary-button-background: {{ $colors.button_background_color }};
-        --primary-button-text-color: {{ $colors.button_text_color }};
+        --primary-button-background: {{ .Site.Data.appearance.colors.primary_button_background_color }};
+        --primary-button-text-color: {{ $colors.primary_button_text_color }};
         --primary-link-color: {{ $colors.links }};
         --primary-accent-color: {{ $colors.accent }};
         --idx-title-color: {{ $colors.idx_title_background_color }};
@@ -42,7 +42,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 <!-- STYLESHEETS AND RESOURCES-->
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/globals.css">
 {{ if $.Site.Data.idx.enable_idx }}
     <link rel="stylesheet" href="{{.Site.BaseURL}}css/ihf_style.css">
 {{ end }}
