--- a/layouts/partials/page-builder/hero.html
+++ b/layouts/partials/page-builder/hero.html
@@ -16,7 +16,7 @@
           <h1 class="text-4xl font-bold tracking-tight sm:text-6xl" style="color:{{ index .sectionData "headingColor" }}">{{ index .sectionData "heading" }}</h1>
           <div class="mt-6 text-lg leading-8" style="color:{{ index .sectionData "bodyColor" }}">{{ index .sectionData "body" | markdownify }}</div>
           <div class="mt-10 flex items-center justify-center gap-x-6">
-            <a href="{{ index .sectionData "button_link" }}" class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">Get started</a>
+            <a href="{{ index .sectionData "button_link" }}" class="primary-button">Get started</a>
           </div>
         </div>
       </div>
