--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ partial "global/head" }}
 {{ partial "global/navbar" }}
-
+<h1>test{{ .Site.Data.appearance.colors_primary_button_background_color }}
+</h1>
 {{ range .Params.home_sections }}
 
     {{ if eq "text-and-image" .type }}
