--- a/layouts/partials/page-builder/call-to-action.html
+++ b/layouts/partials/page-builder/call-to-action.html
@@ -1,17 +1,19 @@
-<div class="bg-white">
-    <div class="mx-auto max-w-7xl py-24 sm:px-6 sm:py-32 lg:px-8">
-      <div class="relative isolate overflow-hidden bg-gray-900 px-6 pt-16 shadow-2xl sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
-        <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left">
+<div class="section">
+    <div class="container mx-auto">
+      <div class="md:flex items-center gap-10">
+        <div class="md:w-1/2">
           <h2>{{ index .sectionData "heading" }}</h2>
-          <p>{{ index .sectionData "body" | markdownify }}</p>
+          <div>{{ index .sectionData "body" | markdownify }}</div>
           <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
             <a href="#" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Get started</a>
             <a href="#" class="text-sm font-semibold leading-6 text-white">Learn more <span aria-hidden="true">→</span></a>
           </div>
         </div>
-        <div class="relative mt-16 h-80 lg:mt-8">
-          <img class="absolute left-0 top-0 w-[57rem] max-w-none rounded-md bg-white/5 ring-1 ring-white/10" src="https://tailwindui.com/img/component-images/dark-project-app-screenshot.png" alt="App screenshot" width="1824" height="1080">
+        {{ if index .sectionData "image"}}
+        <div class="md:w-1/2">
+          <img src="{{ index .sectionData "image" }}" alt="{{ index .sectionData "imageAlt" }}">
         </div>
+        {{ end }}
       </div>
     </div>
   </div>
