--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -3,6 +3,11 @@
     padding-bottom: 5rem;
 }
 
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .primary-button {
     background-color: var(--primary-button-background);
     color: var(--primary-button-text-color);
@@ -11,4 +16,27 @@
     padding-left: 25px;
     padding-right: 25px;
     display: block;
+}
+
+/* CONTENT */
+body .content h1, 
+body .content h2, 
+body .content h3, 
+body .content h4, 
+body .content h5, 
+body .content h6 {
+  line-height: 1.374;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  margin-top: 0.5rem;
+  color: var(--website-heading-color, #000);
+}
+
+.content p + p {
+    margin-top: 1.5rem;
+  }
+  
+
+.content h2 {
+    font-size: 2rem;
 }
