--- a/layouts/partials/page-builder/call-to-action.html
+++ b/layouts/partials/page-builder/call-to-action.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section" style="background-color:{{ index .sectionData "background_color" }};background-image:url({{ index .sectionData "background_image" }})">
     <div class="container mx-auto">
       <div class="md:flex items-center gap-10 space-y-10 {{ if index .sectionData "reverse_column" }} flex-row-reverse {{ end }}">
         <div class="md:w-1/2">
