--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -64,6 +64,11 @@
 		activationToken: "3779C949-155D-6043-0911FD9A208A875D",
 	};
 </script>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+/>
 
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body>
