--- a/layouts/partials/page-builder/featured-grid.html
+++ b/layouts/partials/page-builder/featured-grid.html
@@ -5,8 +5,8 @@
             {{ . | markdownify }}
         </div>
         {{ end }}
-        <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-none">
-            <div class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
+        <div class="mx-auto mt-16 sm:mt-20 lg:mt-24">
+            <div class="grid grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-{{ with index .sectionData "column_number" }}{{ . }}{{ else }}3{{ end }}">
             {{ range index .sectionData "featured_blocks" }}
             <div class="flex flex-col items-start">
             {{ with .image }}
