--- a/layouts/partials/page-builder/featured-grid.html
+++ b/layouts/partials/page-builder/featured-grid.html
@@ -1,5 +1,5 @@
 <div class="section" style="{{ if index .sectionData "background_color" }}background-color:{{ index .sectionData "background_color" }}{{ end }};{{ if index .sectionData "background_image" }}background-image:url({{ index .sectionData "background_image" }}){{ end }}">
-    <div class="container mx-auto">
+    <div class="container mx-auto" style="{{ with index .sectionData "body_color" }}color:{{ . }}{{ end }}">
         {{ with index .sectionData "body" }}
         <div class="mx-auto max-w-2xl lg:text-center content">
             {{ . | markdownify }}
