--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
     {{ partial "page-builder/featured-grid" (dict "sectionData" .) }}
     {{ end }}
 
-    {{ if eq "featured_panel" .type }}
+    {{ if eq "featured_Panel" .type }}
     {{ partial "page-builder/featured-panel" (dict "sectionData" .) }}
     {{ end }}
 
