--- a/layouts/partials/page-builder/featured-panel.html
+++ b/layouts/partials/page-builder/featured-panel.html
@@ -1,3 +1,58 @@
+{{ if index .sectionData "slider" }}
+<div
+  class="swiper-container"
+  style="{{ if index .sectionData "background_color" }}background-color:{{ index .sectionData "background_color" }}{{ end }};{{ if index .sectionData "background_image" }}background-image:url({{ index .sectionData "background_image" }}){{ end }}"
+>
+  <div
+    class="swiper-wrapper"
+  >
+    {{ range index .sectionData "featured_blocks" }}
+    <div class="swiper-slide">
+      <div
+        class="container mx-auto"
+        style="{{ with index .sectionData "body_color" }}color:{{ . }}{{ end }}"
+      >
+        {{ with .image }}
+        <img
+          src="{{ . }}"
+          alt=""
+          class="absolute inset-0 -z-10 h-full w-full object-cover"
+        />
+        {{ end }}
+        {{ with .body }}
+        <div
+          class="mx-auto max-w-2xl lg:text-center content"
+        >
+          {{ . | markdownify }}
+        </div>
+        {{ end }}
+      </div>
+    </div>
+    {{ end }}
+  </div>
+  <!-- Add Pagination -->
+  <div class="swiper-pagination"></div>
+  <!-- Add Navigation -->
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+</div>
+<script>
+    var mySwiper = new Swiper(".swiper-container", {
+      // Optional: Add your Swiper settings here
+      slidesPerView: 1, // Number of slides to display
+      spaceBetween: 30, // Space between slides (in pixels)
+      loop: true, // Infinite loop
+      pagination: {
+        el: ".swiper-pagination", // Pagination container
+      },
+      navigation: {
+        nextEl: ".swiper-button-next", // Next slide button
+        prevEl: ".swiper-button-prev", // Previous slide button
+      },
+    });
+  </script>
+{{ else }}
+
 <div class="section" style="{{ if index .sectionData "background_color" }}background-color:{{ index .sectionData "background_color" }}{{ end }};{{ if index .sectionData "background_image" }}background-image:url({{ index .sectionData "background_image" }}){{ end }}">
     <div class="container mx-auto" style="{{ with index .sectionData "body_color" }}color:{{ . }}{{ end }}">
         {{ with index .sectionData "body" }}
@@ -8,32 +63,19 @@
         <div class="mx-auto mt-16 sm:mt-20 lg:mt-24">
             <div class="grid grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-{{ with index .sectionData "column_number" }}{{ . }}{{ else }}3{{ end }}">
             {{ range index .sectionData "featured_blocks" }}
-            <article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pb-8 pt-80 sm:pt-48 lg:pt-80">
-                <img src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
-                <div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40"></div>
-                <div class="absolute inset-0 -z-10 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
-        
-                <div class="flex flex-wrap items-center gap-y-1 overflow-hidden text-sm leading-6 text-gray-300">
-                  <time datetime="2020-03-16" class="mr-8">Mar 16, 2020</time>
-                  <div class="-ml-4 flex items-center gap-x-4">
-                    <svg viewBox="0 0 2 2" class="-ml-0.5 h-0.5 w-0.5 flex-none fill-white/50">
-                      <circle cx="1" cy="1" r="1" />
-                    </svg>
-                    <div class="flex gap-x-2.5">
-                      <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-6 w-6 flex-none rounded-full bg-white/10">
-                      Michael Foster
-                    </div>
-                  </div>
-                </div>
-                <h3 class="mt-3 text-lg font-semibold leading-6 text-white">
-                  <a href="#">
-                    <span class="absolute inset-0"></span>
-                    Boost your conversion rate
-                  </a>
-                </h3>
-              </article>
+            <div class="relative isolate flex justify-center items-center text-center h-full overflow-hidden px-8 py-40 sm:py-48 lg:py-52">
+                <a href="{{ .button_link }}">
+                {{ with .image }}
+                <img src="{{ . }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
+                {{ end }}
+                <div class="content">{{ .body | markdownify }}</div>
+                <div class="absolute left-0 right-0 bottom-0 top-0" style="{{with index .sectionData "background_overlay"}}background-color:{{ . }}{{ end }}"></div>
+            </a>
+              </div>
             {{ end }}
             </div>
         </div>
     </div>
 </div>
+
+{{ end }}
