--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -3,27 +3,34 @@
 {{ $size := .Site.Data.developer }}
 
 <div class="section">
-    <div class="container uk-container-large">
-        <div class="uk-grid-small" uk-grid>
-            <div class="uk-width-{{ $size.column_size }}">
-                {{ $teamCount := len (where .Site.RegularPages "Section" "==" "team") }}
-                {{ if gt $teamCount 0 }}
-                {{ $paginator := .Paginate (where .Pages "Type" "team") 6 }}
-                {{ range $paginator.Pages.ByWeight }}
-                {{ if ne .Title "" }}
-                {{ end }}
-                {{ end }}
-                {{ else }}
-                <div class="uk-width-3-4@s">
-                    <div class="inner-container">
-                        <h4>No team added yet</h4>
-                        <p>Check back later for updated information</p>
-                    </div>
-                </div>
-                {{ end }}
-
+    <div class="container mx-auto">
+        {{ $teamCount := len (where .Site.RegularPages "Section" "==" "team") }}
+        {{ if gt $teamCount 0 }}
+        {{ $paginator := .Paginate (where .Pages "Type" "team") 6 }}
+        <ul role="list"
+            class="mx-auto mt-20 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-14 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3 xl:grid-cols-4">
+            {{ range $paginator.Pages.ByWeight }}
+            {{ if ne .Title "" }}
+            <li>
+                <a href="{{ .Permalink }}">
+                    <img class="aspect-[14/13] w-full object-cover"
+                        src="{{ .Params.image }}"
+                        alt="">
+                    <h3 class="mt-6 text-lg font-semibold leading-8 tracking-tight">{{ .Params.title }}</h3>
+                    <p class="text-base leading-7 text-gray-300">{{ .Params.position }}</p>
+                </a>
+            </li>
+            {{ end }}
+            {{ end }}
+        </ul>
+        {{ else }}
+        <div class="uk-width-3-4@s">
+            <div class="inner-container">
+                <h4>No team added yet</h4>
+                <p>Check back later for updated information</p>
             </div>
         </div>
+        {{ end }}
     </div>
 </div>
 {{ end }}
