--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,8 +2,9 @@
 {{ partial "global/navbar" . }}
 <div>
     <div class="relative isolate overflow-hidden pt-14">
-      <img src="background-image:url({{ .Site.Data }})" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
-      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-40">
+      <img src="{{ .Site.Data.appearance.banner_image }}" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover">
+      <div class="bg-gray-950 opacity-80 absolute left-0 right-0 top-0 bottom-0 z-10"></div>
+      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-40 relative z-20">
         <div class="text-center">
           <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ .Params.Title }}</h1>
         </div>
