--- a/layouts/team/single.html
+++ b/layouts/team/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 <div class="section">
     <div class="container mx-auto">
-        <div class="md:flex gap-20">
-            <div class="md:w-1/3">
+        <div class="md:flex gap-20 justify-center">
+            <div class="md:w-1/2">
                 <div class="mx-auto grid max-w-2xl grid-cols-1 items-start gap-x-8">
                     <div class="lg:pr-4">
                         <img class="h-full w-ful" src="{{ .Params.image }}" alt="{{ .Params.title }}">
@@ -27,7 +27,7 @@
                       </div>
                     </dl>
             </div>
-            <div class="md:w-2/3">
+            <div class="md:w-1/2">
                 <div class="content">
                     <div class="text-base leading-7 text-gray-700 lg:max-w-lg">
                       <p class="text-base font-semibold leading-7 accent">{{ .Params.position }}</p>
