--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -1,46 +1,44 @@
 {{ define "main" }}
 {{ $size := .Site.Data.developer }}
 
-<div class="uk-section">
-    <div class="uk-container uk-container-large">
-        <div class="uk-grid-small" uk-grid>
-            <div class="uk-width-{{ $size.column_size }}">
-                {{ if .Params.featured_image }}
-                <div class="uk-margin-medium">
-                    <img src="{{ .Params.featured_image | absURL }}" alt="{{ .Params.image_alt_tag }}">
+<div class="section">
+    <div class="container mx-auto p-4">
+        <div class="md:flex justify-center gap-20">
+            <div class="md:w-3/5 content">
+                {{ if .Params.thumbnail }}
+                <div class="mb-8">
+                    <img src="{{ .Params.thumbnail }}" alt="{{ .Params.alt_tag }}">
                 </div>
                 {{ end }}
-                <div class="md-content">
+                <div>
                     {{ .Content }}
                 </div>
-                <hr>
+                <hr class="my-8">
                 {{ if .Params.categories }}
-                <ul class="uk-list md-content">
-                    <h2 class="uk-h5 hr-text-medium-bold">Categories</h2>
+                <ul class="prose">
+                    <h2 class="text-lg font-semibold">Categories</h2>
                     {{ range $name, $taxonomy := $.Site.Taxonomies.categories }}
                     <li>
-                        <a href="/categories{{ $name | urlize | relURL }}" class="uk-text-link">{{ $name | humanize }}</a>
+                        <a href="/categories{{ $name | urlize | relURL }}" class="text-blue-600 hover:underline">{{ $name | humanize }}</a>
                     </li>
                     {{ end }}
                 </ul>
                 {{ end }}
                 {{ if .Params.tags }}
-                <ul class="uk-list md-content">
-                    <h2 class="uk-h5 hr-text-medium-bold">Tags</h2>
+                <ul class="prose">
+                    <h2 class="text-lg font-semibold">Tags</h2>
                     {{ range $name, $taxonomy := $.Site.Taxonomies.tags }}
                     <li>
-                        <a href="/tags{{ $name | urlize | relURL }}" class="uk-text-link">{{ $name | humanize }}</a>
+                        <a href="/tags{{ $name | urlize | relURL }}" class="text-blue-600 hover:underline">{{ $name | humanize }}</a>
                     </li>
                     {{ end }}
                 </ul>
                 {{ end }}
-
-                <div class="uk-margin-medium-top">
+                <div class="mt-8">
                     {{ partial "templates/share" . }}
                 </div>
             </div>
-            
-            {{ partial "templates/page-sidebar" . }}
+            {{ partial "templates/sidebar" . }}
         </div>
     </div>
 </div>
