--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -43,3 +43,68 @@ body .content h6 {
 body a:hover {
     text-decoration: none;
 }
+
+/* SOCIAL SHARING */
+
+div#social-share div {
+    margin: 5px;
+    display: inline-block;
+}
+
+.share-button {
+    padding: 5px;
+    transition: .2s;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 3px;
+}
+
+.share-button.facebook { 
+    background-color: #4A66B7;
+
+}
+
+.share-button.facebook:hover {              
+    background-color: #243c85;
+    color: #fff;
+    transition: .2s;
+}
+
+.share-button.x { 
+    background-color: #000000;
+}
+
+.share-button.x:hover { 
+    transition: .2s;
+    color: #fff;
+    background-color: #0e0e0e; 
+}
+
+.share-button.linkedin { 
+    background-color: #0077B5;
+}
+
+.share-button.linkedin:hover { 
+    transition: .2s;
+    color: #fff;
+    background-color: #155b81; 
+}
+
+.share-button.pinterest { 
+    background-color: #c92228; 
+}
+
+.share-button.pinterest:hover { 
+    transition: .2s;
+    color: #fff;
+    background-color: #a82125; 
+}
+
+.share-button.email { 
+    background-color: #222222; 
+}
+
+.share-button.email:hover { 
+    color: #fff;
+    background-color: #000000; 
+}
