--- a/layouts/legal/list.html
+++ b/layouts/legal/list.html
@@ -2,9 +2,9 @@
 <div class="section">
     <div class="container mx-auto">
         <div class="text-center">
-            <ul class="list-disc list-inside">
+            <ul>
                 {{ range .Pages }}
-                <li><a href="{{ .Permalink }}" class="text-2xl font-semibold">{{ .Title }}</a></li>
+                <li><a href="{{ .Permalink }}" class="text-2xl font-semibold mb-3">{{ .Title }}</a></li>
                 {{ end }}
             </ul>
         </div>
