--- a/layouts/legal/single.html
+++ b/layouts/legal/single.html
@@ -2,8 +2,8 @@
 {{ $company := .Site.Data.profile.company_name }}
 <div class="section">
     <div class="container mx-auto">
-        <div class="md:grid md:grid-cols-3 md:gap-6">
-            <div class="md:col-span-2">
+        <div class="md:flex justify-center">
+            <div class="md:w-3/4 content">
                 <div class="px-4 py-5 sm:p-6">
                     <p><strong>Last Updated: </strong>{{ .Params.last_update }}</p>
                     <p><strong>Our Website:</strong> {{ .Site.BaseURL }}</p>
