--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -17,6 +17,10 @@
         --primary-accent-color: {{ .Site.Data.appearance.colors_accent }};
         --idx-title-color: {{ .Site.Data.appearance.colors.idx_title_background_color }};
         --idx-title-text-color: {{ .Site.Data.appearance.colors.idx_title_text_color }};
+        
+        /* TYPOGRAPHY */
+        --footer-heading-color: {{ .Site.Data.footer.footer_heading_color }};
+        --footer-text-color: {{ .Site.Data.footer.footer_text_color }};
     }
 </style>
 
@@ -41,7 +45,9 @@
 {{ .Site.Data.developer.custom_css | safeHTML }}
 
 <!-- FONTS -->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
 <!-- STYLESHEETS AND RESOURCES-->
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/globals.css">
