--- a/layouts/partials/templates/blog-list.html
+++ b/layouts/partials/templates/blog-list.html
@@ -8,19 +8,17 @@
                 {{ $paginator := .Paginate (where .Pages "Type" "blog") 6 }}
                 {{ range $paginator.Pages.ByWeight }}
                     {{ if ne .Title "" }}
-                        <div class="rounded-lg overflow-hidden shadow-md">
-                            <div class="relative h-0 pb-2/3">
-                                {{ if .Params.featured_image }}
-                                    <img src="{{ .Params.featured_image | absURL }}" alt="{{ .Params.image_alt_tag }}" class="absolute inset-0 w-full h-full object-cover">
-                                {{ else }}
-                                    <img src="https://res.cloudinary.com/hungryram19/image/upload/v1645813822/Resources/realestate-assets/no-house-photo.jpg" alt="no photo" class="absolute inset-0 w-full h-full object-cover">
+                        <div class="rounded-md overflow-hidden shadow-md">
+                            <div class="relative h-80 pb-2/3">
+                                {{ if .Params.thumbnail }}
+                                    <img src="{{ .Params.thumbnail }}" alt="{{ .Params.image_alt_tag }}" class="absolute inset-0 w-full h-full object-cover">
                                 {{ end }}
                             </div>
                             <div class="p-4">
                                 <h2 class="text-xl font-semibold">{{ .Title }}</h2>
                                 <time class="text-xs text-gray-600">{{ .Date.Format "Jan 2, 2006" }}</time>
                                 <div class="mt-2">
-                                    <p>{{ .Summary }}</p>
+                                    <p>{{ .Content | truncate 150 }}</p>
                                 </div>
                                 <a href="{{ .Permalink }}" class="text-blue-600 font-bold italic">Read more...</a>
                             </div>
