--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,5 @@
 {{ partial "global/head" . }}
 {{ partial "global/navbar" . }}
-</h1>
 {{ range .Params.home_sections }}
 
     {{ if eq "text-and-image" .type }}
@@ -18,6 +17,11 @@
     {{ if eq "featured_Panel" .type }}
     {{ partial "page-builder/featured-panel" (dict "sectionData" .) }}
     {{ end }}
+
+    {{ if eq "team_section" .type }}
+    {{ partial "page-builder/team-section" (dict "sectionData" .) }}
+    {{ end }}
+    
 
 {{ end }}
 
