--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -11,15 +11,7 @@
             class="mx-auto mt-20 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-14 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3 xl:grid-cols-4">
             {{ range $paginator.Pages.ByWeight }}
             {{ if ne .Title "" }}
-            <li>
-                <a href="{{ .Permalink }}">
-                    <img class="aspect-[14/13] w-full object-cover"
-                        src="{{ .Params.image }}"
-                        alt="">
-                    <h3 class="mt-6 text-lg font-semibold leading-8 tracking-tight">{{ .Params.title }}</h3>
-                    <p class="text-base leading-7 text-gray-300">{{ .Params.position }}</p>
-                </a>
-            </li>
+            {{ partial "templates/team-card" (dict "Permalink" .Permalink "title" .Title "image" .Params.image "image_alt" .Params.image_alt "position" .Params.position ) }}
             {{ end }}
             {{ end }}
         </ul>
