--- a/layouts/partials/page-builder/featured-panel.html
+++ b/layouts/partials/page-builder/featured-panel.html
@@ -10,7 +10,7 @@
     </div>
     {{ end }}
 </div>
-    <div class="swiper-container-fPanel mt-16">
+    <div class="swiper-container-fPanel mt-16 overflow-hidden">
         <div class="swiper-wrapper">
         {{ range index .sectionData "featured_blocks" }}
         <div class="swiper-slide">
