--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,12 @@
 {{ define "main" }}
 
 <div class="section">
-    <div class="container">
+    <div class="container content mx-auto text-center">
         <h1>Page not found</h1>
         <p>The page you're looking for may have been moved or deleted. Don't worry we have plenty of resources on our website.</p>
-        <a href="{{ .Site.BaseURL }}" class="primary-button">Back Home</a>
+        <div class="mt-10">
+            <a href="{{ .Site.BaseURL }}" class="primary-button">Back Home</a>
+        </div>
     </div>
 </div>
 {{ end }}
