--- a/layouts/partials/templates/team-card.html
+++ b/layouts/partials/templates/team-card.html
@@ -1,7 +1,9 @@
-<li>
+<div>
     <a href="{{ .Permalink }}">
-        <img class="aspect-[14/13] w-full object-cover" src="{{ .image }}" alt="{{ .title }}">
+        <div>
+            <img class="w-full object-cover" src="{{ .image }}" alt="{{ .title }}">
+        </div>
         <h3 class="mt-6 text-lg font-semibold leading-8 tracking-tight">{{ .title }}</h3>
         <p class="text-base leading-7 text-gray-300">{{ .position }}</p>
     </a>
-</li>
+</div>
