--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -7,14 +7,14 @@
         {{ $teamCount := len (where .Site.RegularPages "Section" "==" "team") }}
         {{ if gt $teamCount 0 }}
         {{ $paginator := .Paginate (where .Pages "Type" "team") 6 }}
-        <ul role="list"
+        <div role="list"
             class="mx-auto mt-20 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-14 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3 xl:grid-cols-4">
             {{ range $paginator.Pages.ByWeight }}
             {{ if ne .Title "" }}
             {{ partial "templates/team-card" (dict "Permalink" .Permalink "title" .Title "image" .Params.image "image_alt" .Params.image_alt "position" .Params.position ) }}
             {{ end }}
             {{ end }}
-        </ul>
+        </div>
         {{ else }}
         <div class="uk-width-3-4@s">
             <div class="inner-container">
