--- a/layouts/partials/global/head.html
+++ b/layouts/partials/global/head.html
@@ -43,7 +43,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
 <!-- STYLESHEETS AND RESOURCES-->
-<link rel="stylesheet" href="css/globals.css">
+<link rel="stylesheet" href="/css/globals.css">
 
 <!-- CUSTOM SCRIPT -->
 {{ .Site.Data.developer.custom_script | safeHTML }}
